# DataBases-Projects

./: README.md
C-CPP/: Run
C-CPP/B-plus-Tree-DB/: Run
C-CPP/B-plus-Tree-DB/B_Plus_Tree/: CMakeLists.txt
C-CPP/B-plus-Tree-DB/B_Plus_Tree/Include/: AM.h  Operations.h
C-CPP/B-plus-Tree-DB/B_Plus_Tree/src/: AM.c  Operations.c  main.c
C-CPP/Heap-Management-DB/: Run  heap.h~  main.c~
C-CPP/Heap-Management-DB/Heap_Managment/: CMakeLists.txt
C-CPP/Heap-Management-DB/Heap_Managment/File Directory/: Header_Info
C-CPP/Heap-Management-DB/Heap_Managment/Include/: column_store.h  heap.h
C-CPP/Heap-Management-DB/Heap_Managment/src/: column_store.c  heap.c  main.c
C-CPP/Heap-Management-DB/Read Me/: READ ME
C-CPP/Heap-Simulaton-DB/: Run
C-CPP/Heap-Simulaton-DB/Heap_Simulation/: CMakeLists.txt
C-CPP/Heap-Simulaton-DB/Heap_Simulation/Include/: BF.h  heap.h
C-CPP/Heap-Simulaton-DB/Heap_Simulation/src/: heap.c  main.c
C-CPP/Heap-Simulaton-DB/ReadMe/: READ ME
